--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mahjong in Angular",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "karma start karma-config.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,27 @@
   "homepage": "https://github.com/Marthijnverhoeven/angular#readme",
   "devDependencies": {
     "angular": "^1.5.5",
+    "angular-mocks": "^1.5.5",
+    "browserify": "^13.0.0",
+    "browserify-istanbul": "^2.0.0",
+    "browserify-shim": "^3.8.12",
+    "chai": "^3.5.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-http-server": "^1.16.0"
+    "grunt-http-server": "^1.16.0",
+    "grunt-karma": "^0.12.2",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.4",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "latest",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-sinon": "^1.0.4",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3"
   },
   "dependencies": {
     "underscore": "latest"
