--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-http-server": "^1.16.0",
+    "grunt-ts": "^5.5.0-beta.2",
     "grunt-karma": "^0.12.2",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.4",
@@ -41,6 +42,9 @@
     "sinon": "^1.17.3"
   },
   "dependencies": {
+    "angular": "^1.5.5",
+    "bootstrap": "^3.3.6",
+    "jquery": "^2.2.3",
     "underscore": "latest"
   }
 }
