--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Marthijnverhoeven/angular#readme",
   "devDependencies": {
     "angular": "^1.5.5",
+    "angular-route": "^1.3.15",
+    "angular-ui-router": "^0.2.15",
     "angular-mocks": "^1.5.5",
     "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
